buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: "org.springframework.boot"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "java"
    apply plugin: 'java-library'

    group = 'com.devlog'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        compileOnly "org.projectlombok:lombok"
        annotationProcessor "org.projectlombok:lombok"
        testCompileOnly("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")
        testImplementation("org.springframework.boot:spring-boot-starter-test") {
            exclude group: "org.junit.vintage", module: "junit-vintage-engine"
        }
    }

    test {
        useJUnitPlatform()
    }

}

// 루트 프로젝트(최상단)는 실행 파일이 아니므로 bootJar를 끕니다.
bootJar { enabled = false }

project(':ztlog-api') {
    bootJar { enabled = true } // 실행 모듈은 활성화
    jar { enabled = false }
    dependencies {
        implementation(project(':ztlog-core'))
    }
}

project(':ztlog-admin') {
    bootJar { enabled = true } // 실행 모듈은 활성화
    jar { enabled = false }
    dependencies {
        implementation(project(':ztlog-core'))
    }
}

project(':ztlog-core') {
    bootJar { enabled = false } // 라이브러리 모듈은 비활성화
    jar { enabled = true }
}
